--- a/pom.xml
+++ b/pom.xml
@@ -195,26 +195,26 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.liquibase</groupId>
-        <artifactId>liquibase-maven-plugin</artifactId>
-        <version>3.0.5</version>
-        <configuration>
-          <changeLogFile>db/master.xml</changeLogFile>
-          <driver>com.mysql.jdbc.Driver</driver>
-          <url>jdbc:mysql://localhost:3306/carbook</url>
-          <username>root</username>
-          <password>root</password>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>status</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.liquibase</groupId>-->
+        <!--<artifactId>liquibase-maven-plugin</artifactId>-->
+        <!--<version>3.0.5</version>-->
+        <!--<configuration>-->
+          <!--<changeLogFile>db/master.xml</changeLogFile>-->
+          <!--<driver>com.mysql.jdbc.Driver</driver>-->
+          <!--<url>jdbc:mysql://localhost:3306/carbook</url>-->
+          <!--<username>root</username>-->
+          <!--<password>root</password>-->
+        <!--</configuration>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<phase>process-resources</phase>-->
+            <!--<goals>-->
+              <!--<goal>status</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
