--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/carbook?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/carbook?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://b871f953c19ff9:abdd4899@eu-cdbr-west-02.cleardb.net/heroku_203f19cfef9288d?reconnect=true?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring.datasource.username=b871f953c19ff9
+spring.datasource.password=abdd4899
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
 
 spring.session.store-type=none
 security.basic.enabled=false
