--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=qa
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/carbook?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_203f19cfef9288d?reconnect=true?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #spring.datasource.username=root
