--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.session.store-type=none
 security.basic.enabled=false
 
-server.port = 8090
+server.port=${PORT:8090}
 
 server.session.timeout=300
 
